# cvd-transformer-survival

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
configs/: evaluate.yaml  predict.yaml  predict_uploaded_data.yaml  train.yaml  train_uploaded_data.yaml
examples/: example_inference.py  manuscript_training_template_columns.txt
src/cvd_transformer_survival/: __init__.py  dataset.py  evaluate.py  loss.py  model.py  predict.py  train.py  trainer.py  utils.py
src/cvd_transformer_survival.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_config_load.py  test_evaluate_smoke.py  test_import.py  test_predict_smoke.py  test_train_smoke.py
