[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cvd-transformer-survival"
version = "0.1.0"
description = "A Transformer-based discrete-time survival model for cardiovascular risk prediction using health checkup data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "Shota Tsurimoto", email = "tsurimoto@staff.kanazawa-u.ac.jp" }
]
keywords = ["cardiovascular disease", "survival analysis", "transformer", "deep learning", "pytorch"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent"
]
dependencies = [
  "torch",
  "numpy",
  "pandas",
  "matplotlib",
  "scikit-learn",
  "PyYAML"
]

[project.urls]
Homepage = "https://github.com/tsurimoto828/cvd-transformer-survival"
Repository = "https://github.com/tsurimoto828/cvd-transformer-survival"
Issues = "https://github.com/tsurimoto828/cvd-transformer-survival/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]
